[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://Scenes/Pet.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/sfx/hitHurt.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/sfx/gameover.wav" type="AudioStream" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 16, 16, 0, 0, 0, 0, 1264, 16, 0, 0, 0, 0, 1264, 704, 0, 0, 0, 0, 16, 704, 0, 0, 0, 0, 16, 16 )
}

[node name="Main" type="Node"]
script = ExtResource( 3 )
enemy_scene = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.545098, 0.67451, 0.0588235, 1 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="EnemyTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Position2D" parent="."]
position = Vector2( 640, 360 )

[node name="EnemyPath" type="Path2D" parent="."]
curve = SubResource( 1 )

[node name="EnemySpawnLocation" type="PathFollow2D" parent="EnemyPath"]
position = Vector2( 16, 16 )

[node name="Pet" parent="." instance=ExtResource( 4 )]
position = Vector2( 0, 6 )

[node name="BlackScreen" type="ColorRect" parent="."]
visible = false
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.0588235, 0.219608, 0.0588235, 1 )

[node name="ScoreTimer" type="Timer" parent="."]

[node name="HUD" parent="." instance=ExtResource( 5 )]

[node name="PlayerHitAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 640, 0 )
stream = ExtResource( 6 )

[node name="GameOverAudio" type="AudioStreamPlayer2D" parent="."]
position = Vector2( 640, 0 )
stream = ExtResource( 7 )

[connection signal="dead" from="Player" to="." method="game_over"]
[connection signal="hit" from="Player" to="." method="_on_Player_hit"]
[connection signal="timeout" from="EnemyTimer" to="." method="_on_EnemyTimer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
[connection signal="score_up" from="Pet" to="." method="_on_Pet_score_up"]
[connection signal="resized" from="BlackScreen" to="." method="_on_BlackScreen_resized"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_ScoreTimer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
